<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TodoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_item">Enter new item</string>
    <string name="bt_add">Add</string>
    <string name="et_new_item_hint">Enter new todo item that you want to track</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btSave">Save</string>
    <string name="lblEditItem">Edit Item Below</string>
    <string name="lblDueDate">Due Date</string>
    <string name="label">"Label "</string>
    <string name="lblLow">Low</string>
    <string name="lblPriority">Priority</string>
    <string name="lblMisc">Misc</string>

</resources>
