<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bootcamp.example.todolist.EditActivity" >

    <TextView
        android:id="@+id/tvEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/lblEditItem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEditItem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btDueDate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDueDate"
        android:layout_alignBottom="@+id/tvDueDate"
        android:layout_alignRight="@+id/etEditItem"
        android:layout_toRightOf="@+id/tvEditItem"
        android:onClick="onbtDueDateClick"
        android:text="@string/lblDueDate" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEditItem"
        android:layout_below="@+id/etEditItem"
        android:layout_marginTop="22dp"
        android:text="@string/lblDueDate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <AutoCompleteTextView
        android:id="@+id/actvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btDueDate"
        android:layout_alignRight="@+id/btDueDate"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="@string/lblLow" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDueDate"
        android:layout_alignRight="@+id/btDueDate"
        android:layout_below="@+id/actvLabel"
        android:layout_marginTop="26dp"
        android:onClick="onbtSaveClick"
        android:text="@string/btSave" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/actvLabel"
        android:layout_alignBottom="@+id/actvLabel"
        android:layout_alignRight="@+id/tvDueDate"
        android:text="@string/lblPriority"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
